components/o-topper/src/scss/themes/_full-bleed-offset.scss
// sass-lint:disable mixins-before-declarations

@mixin _oTopperThemeFullBleedOffset {
	&.o-topper--right-rail {
		
		.o-topper__image-credit {
			@include oGridRespondTo(L) {
				width: calc( 50vw - 185px);
    			transform: translate(calc(50vw - 470px),100%);
			}
			@include oGridRespondTo(XL) {
				transform: translate(calc(100% - 435px),100%);
				width: calc(50vw - 140px);
			}
		}
	}
	display: flex;
	flex-direction: column;
	
	@include oGridRespondTo($until: L) {
		margin: 0 auto;
		padding: 0;

		.o-topper__background {
			position: absolute;
			height:100%;
		}
	}

	.o-topper__read-next {
		display: none;
	}

	.o-topper__content {
		padding: 20px 10px;
		order: 2;

		@include oGridRespondTo(M) {
			padding-left: 20px;
			padding-right: 20px;
		}
	}

	&.o-topper--color-paper .o-topper__content {
		padding-bottom: 0;
	}

	@include oGridRespondTo(M) {
		display: grid;
		grid-template-columns: auto;
		grid-template-rows: 20px min-content 60px min-content;

		.o-topper__content {
			grid-column: 1;
			grid-row: 3 / span 2;
		}

		.o-topper__visual {
			grid-column: 1;
			grid-row: 1 / span 3;
			
		}
	}


	//Add extra 20px columns to get the space outside the content well
	@include oGridRespondTo(L) {
		grid-template-columns: 40px 40px 20px minmax(500px, 700px) 40px minmax(0, auto) 300px;

		// .o-topper__content {
		&.o-topper--centered {
			grid-template-columns: 40px 1fr 0 minmax(500px, 700px) 40px 1fr 40px;
		}

		.o-topper__content {
			grid-column: 4 / span 2;
		}

		.o-topper__background {
			grid-column: 1 / span 7;
			grid-row: 4 / span 2;
		}

		.o-topper__visual {
			grid-column: 1 / span 7;
			left: 0px;
			margin-left:0px;
			width: inherit;
			overflow: visible;
		}
		.o-topper__picture{
			position: absolute;
			width: 100vw;
			margin-left:-50vw;
			left:50%;
			height:100%;
		}
	}

	@supports (object-fit: cover) {
		.o-topper__visual {
			height: auto;

			@include oGridRespondTo(L) {
				height: 600px;
			}
		}
	}
	@include oGridRespondTo( $from: M , $until: L ) {
		display:flex;
	}
	.o-topper__image-credit {
		text-align: left;
		@include oGridRespondTo(L) { 
			position: absolute;
			-webkit-transform: translateY(100%);
			transform: translate(calc(100% - 300px), 100%);
			bottom: 0;
			right: 0;
			padding-left: 0px;
			width: 300px;
		}
		@include oGridRespondTo($from: XL) { 
			transform: translate(calc(100% - 340px), 100%);
			width: calc(50vw - 280px );
		}
		
	}

	
}

